--- a/package.json
+++ b/package.json
@@ -6,15 +6,23 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-latest": "^6.16.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.4.1",
     "express": "~4.13.4",
     "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2",
     "morgan": "~1.7.0",
+    "require-all": "^2.0.0",
+    "run-sequence": "^1.2.2",
     "serve-favicon": "~2.3.0",
-    "sw-precache": "^4.2.3"
+    "sw-precache": "^4.2.3",
+    "vinyl-named": "^1.1.0",
+    "webpack-stream": "^3.2.0"
   },
   "main": "index.js",
   "repository": {
